--- a/app/src/main/res/layout/item_phone.xml
+++ b/app/src/main/res/layout/item_phone.xml
@@ -19,6 +19,7 @@
                 android:id="@+id/phone_imageView"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
+                android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +27,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/space_default"
                 app:layout_constraintBottom_toBottomOf="@+id/phone_imageView"
                 app:layout_constraintTop_toTopOf="@+id/phone_imageView"
                 app:layout_constraintStart_toEndOf="@id/phone_imageView"
